Test/errors/err_simd_non_numeric_element.cb
// simd element type must be a numeric scalar (bool / i1 is rejected).

expect_error("simd element type must be a numeric scalar") {
    simd<bool, 4> v;
}
